--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -9,3 +9,25 @@ services:
       - ./pgdata:/var/lib/postgresql/data
     ports:
       - '5432:5432'
+    healthcheck:
+      test:
+        ['CMD-SHELL', 'pg_isready -U ${POSTGRES_DB_USER} -d ${POSTGRES_DB_DB}']
+      interval: 5s
+      timeout: 3s
+      retries: 20
+
+  api:
+    build:
+      context: ..
+      dockerfile: ./Dockerfile
+    container_name: library-api
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      DATABASE_URL: postgresql://${POSTGRES_DB_USER}:${POSTGRES_DB_PASSWORD}@db:5432/${POSTGRES_DB_DB}?schema=public
+      NODE_ENV: production
+      PORT: 3000
+      JWT_SECRET: ${JWT_SECRET}
+    ports:
+      - '3000:3000'
